2001-10-25  Per Bothner  <per@bothner.com>

	* AppendValues.java (compile):  Optimize for SeriesTarget.
	* NamedChildren.java:  Now implements Inlineable.
	(getNamedChild, gotoNext, gotoFirstChild):  New static helper methods.
	(compile, getReturnType):  New methods.
	* NodeType.java:  New class, extends ClassType.
	* Makefile.am (java_sources):  Added NodeType.java.

2001-10-17  Per Bothner  <per@bothner.com>

	* NamedChildren.java:  Turn into a 3-argument procedure.

2001-10-02  Per Bothner  <per@bothner.com>

	* IsEmptySequence.java:  New class; extends Procedure1.
	* Makefile.am (java_sources):  Add IsEmptySequence.java.

2001-09-24  Per Bothner  <per@bothner.com>

	* IntegerRange.java:  New class; extends CpsProcedure.

2001-08-16  Per Bothner  <per@bothner.com>

	* Children.java:  New class, extends CpsProcedure.
	* NamedChildren.java:  New class, extends CpsProcedure.
	* StringValue.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add new classes.

	* Document.java (document):  Call TreeList's beginDocument method.

2001-07-18  Per Bothner  <per@bothner.com>

	New package gnu.xquery.util.
	* XMLFormat.java:  New class, extends AbstractFormat.
	* MakeElement.java:  New class; extends CpsProcedure.
	* MakeAttribute.java:  New class; extends CpsProcedure.
	* Document.java:  New class; extends Procedure1.
	* AppendValues.java:  New class; extends CpsProcedure.
